Actualizando Proyecto y agregando diapositivas y referencias

--- a/Articulo/Latex/3-background.tex
+++ b/Articulo/Latex/3-background.tex
@@ -1,31 +1,31 @@
-\section{Background}
-\subsection{Definición de Metales Pesados}
-En la industria, los metales pesados se utilizan en una variedad de procesos, desde la manufactura hasta la minería. Sin embargo, la manipulación y control de estos metales presentan serios riesgos para la salud y el medio ambiente. Los metales pesados, incluso en concentraciones bajas, pueden ser tóxicos y perjudiciales. La exposición a estos metales puede llevar a problemas de salud graves, dependiendo de la concentración y la duración de la exposición. Los efectos adversos pueden incluir daño a los sistemas respiratorio, nervioso y cardiovascular, y en casos extremos, la muerte.\\
+\subsection{Definici\u00f3n de Metales Pesados}
 
-Los metales pesados considerados en el presente trabajo son:
+En la industria, los metales pesados desempe\u00f1an un papel esencial debido a sus propiedades físicas y químicas \u00fanicas, como la alta densidad y su resistencia a la corrosi\u00f3n. Estos metales son ampliamente utilizados en sectores como la manufactura, la electr\u00f3nica y la minería. Sin embargo, su liberaci\u00f3n al medio ambiente, a trav\u00e9s de efluentes industriales o pr\u00e1cticas inadecuadas de disposici\u00f3n de residuos, representa un desafío significativo para la salud p\u00fablica y la sostenibilidad ambiental \cite{sall2020, zaimee2021}.\\
+
+La toxicidad de los metales pesados, incluso en concentraciones ínfimas, ha sido documentada ampliamente. Estos elementos tienden a acumularse en los organismos vivos, causando efectos adversos acumulativos a largo plazo. Por ejemplo, el plomo y el mercurio, que son altamente persistentes en el medio ambiente, pueden bioacumularse en la cadena alimentaria, afectando tanto a la fauna como a los seres humanos \cite{matthews2022, hughes2011}.\\
+
+De los metales pesados analizados en este trabajo, se destacan los siguientes:
+
 \begin{enumerate}
-    \item \textbf{Plomo (Pb)}: Un metal pesado utilizado en baterías y soldaduras, la exposición prolongada puede causar daños en los riñones, sistema nervioso central, y problemas cardiovasculares \cite{matthews2019}.
-    \item \textbf{Mercurio (Hg)}: Se utiliza en la minería y en algunos procesos industriales, la exposición al mercurio puede causar daño neurológico, problemas renales y efectos adversos en el desarrollo \cite{rao2020}.
-    \item \textbf{Cadmio (Cd)}: Se emplea en baterías recargables y en la industria de recubrimientos, la exposición al cadmio puede causar enfermedad pulmonar, daño renal y cáncer de pulmón \cite{nguyen2022}.
-    \item \textbf{Arsénico (As)}: Utilizado en pesticidas y en la industria del vidrio, la exposición al arsénico puede resultar en cáncer de piel, enfermedad cardiovascular y daño neurológico \cite{smith2021}.
-    \item \textbf{Cromo (Cr)}: Empleado en la producción de acero inoxidable y en tratamientos de cuero, el cromo hexavalente es carcinogénico y puede causar daño a los pulmones y problemas gastrointestinales \cite{johnson2023}.
+    \item \textbf{Plomo (Pb):} Su uso en baterías, pigmentos y soldaduras lo convierte en un metal crucial en la industria. Sin embargo, la exposici\u00f3n prolongada al plomo ha sido asociada con retrasos en el desarrollo cognitivo en ni\u00f1os y disfunci\u00f3n renal en adultos \cite{matthews2022, ding2021}.
+    \item \textbf{Mercurio (Hg):} Ampliamente utilizado en la minería y en dispositivos como term\u00f3metros, el mercurio puede evaporarse f\u00e1cilmente, representando un riesgo tanto para los ecosistemas acu\u00e1ticos como para la salud humana \cite{sall2020, zhumanazar2022}.
+    \item \textbf{Cadmio (Cd):} Este metal, presente en baterías recargables y pinturas, se clasifica como carcinog\u00e9nico. La exposici\u00f3n prolongada puede resultar en osteoporosis y disfunci\u00f3n renal severa \cite{rahimzadeh2017, park2022}.
+    \item \textbf{Ars\u00e9nico (As):} En \u00e1reas donde el agua subterr\u00e1nea est\u00e1 contaminada con ars\u00e9nico, se han observado tasas elevadas de c\u00e1ncer de piel y disfunciones cardiovasculares \cite{hughes2011, truque2024}.
+    \item \textbf{Cromo (Cr):} Aunque el cromo trivalente es esencial en trazas para el metabolismo humano, el cromo hexavalente es altamente t\u00f3xico, causando irritaciones severas y aumentando el riesgo de c\u00e1ncer pulmonar \cite{shin2023, park2022}.
 \end{enumerate}
 
-\subsection{Límites de Concentración y Estándares para Metales Pesados en el Agua}
+\subsection{Límites de Concentraci\u00f3n y Est\u00e1ndares para Metales Pesados en el Agua}
 
-El monitoreo de la calidad del agua en lo que respecta a la presencia de metales pesados, como el mercurio, el plomo, el cadmio y el arsénico, es fundamental para prevenir riesgos a la salud humana. Las normativas establecidas por organizaciones internacionales, como la Organización Mundial de la Salud (OMS) y diversas agencias regulatorias locales, proporcionan los límites de concentración permitidos de estos metales en el agua potable \cite{truque2006, torres2015}.\\
+La presencia de metales pesados en fuentes de agua potable representa una preocupaci\u00f3n prioritaria para los organismos reguladores. La Organizaci\u00f3n Mundial de la Salud (OMS) y agencias como la Agencia de Protecci\u00f3n Ambiental (EPA) de los Estados Unidos han establecido límites de concentraci\u00f3n para proteger la salud humana. Por ejemplo, el límite recomendado para el plomo es de 0.01 mg/L, mientras que para el mercurio es de 0.006 mg/L \cite{truque2024, zaimee2021}.\\
 
-El sistema de detección propuesto está diseñado para detectar y cuantificar las concentraciones de estos metales, permitiendo activar alertas cuando los niveles exceden los valores permitidos por las normativas vigentes \cite{ding2021, matthews2019}. Estos valores, que se presentan en la Figura 1, son fundamentales para calibrar el sistema y asegurar su precisión y confiabilidad.
+El monitoreo continuo de estas concentraciones es fundamental, ya que la exposici\u00f3n prolongada puede derivar en problemas de salud irreversibles. Estudios recientes han destacado el papel de los sensores avanzados, que utilizan materiales como nanopartículas y polímeros conductores para mejorar la sensibilidad y la especificidad en la detecci\u00f3n de metales pesados \cite{yu2022, zhumanazar2022}. Estos avances tecnol\u00f3gicos han permitido la creaci\u00f3n de dispositivos port\u00e1tiles que combinan m\u00e9todos electroquímicos y \u00f3pticos para realizar mediciones en tiempo real \cite{ding2021, park2022}.\\
 
-\newpage
+El dise\u00f1o del sistema propuesto incorpora estas tecnologías emergentes para ofrecer una soluci\u00f3n eficiente y econ\u00f3mica. Adem\u00e1s, los datos obtenidos se comparan con est\u00e1ndares internacionales, permitiendo emitir alertas cuando las concentraciones exceden los valores seguros establecidos \cite{rahimzadeh2017, shin2023}. Este enfoque no solo asegura la precisi\u00f3n del sistema, sino que tambi\u00e9n facilita su implementaci\u00f3n en contextos donde los recursos son limitados.\\
 
+\subsection{Especificaci\u00f3n Formal para Sistemas de Detecci\u00f3n}
 
-\begin{figure}[h]
-    \centering
-    \includegraphics[width=0.5\textwidth]{Recursos/tabla_valores_max.png}
-    \caption{Concentraciones permitidas de metales pesados en el agua y valores estequiométricos \cite{truque2006, smith2021, nguyen2022, johnson2023}}
-\end{figure}
+Para garantizar la confiabilidad y robustez del sistema, se ha empleado un enfoque de especificaci\u00f3n formal. Este m\u00e9todo permite describir de manera rigurosa los comportamientos esperados del sistema, minimizando posibles ambig\u00fcedades en su implementaci\u00f3n \cite{fitzgerald2007, woodcock1996}. Herramientas como Z y otros lenguajes de especificaci\u00f3n formal han demostrado ser eficaces en el dise\u00f1o y validaci\u00f3n de sistemas críticos, como los de detecci\u00f3n de contaminantes \cite{yu2022}.\\
 
-En la tabla presentan los valores máximos permitidos de concentración para metales pesados como el plomo, el mercurio, el arsénico y el cadmio, los cuales han sido objeto de estudios debido a su toxicidad y efectos adversos para la salud \cite{rao2020, smith2021, nguyen2022}. Estos valores sirven como referencia para el diseño del sistema de detección de metales pesados en el agua, asegurando que las mediciones que realice el sistema cumplan con los requisitos internacionales \cite{johnson2023}.\\
+Adem\u00e1s, la validaci\u00f3n del sistema se realiza a trav\u00e9s de pruebas exhaustivas que simulan condiciones reales de operaci\u00f3n. Estas pruebas incluyen escenarios de detecci\u00f3n de m\u00faltiples metales en concentraciones mixtas y la evaluaci\u00f3n de la respuesta del sistema frente a interferencias químicas \cite{rahimzadeh2017, ding2021}. Este enfoque asegura que el sistema cumpla con los requisitos establecidos, brindando resultados precisos y confiables en todo momento.\\
 
-Además, la implementación de este sistema sigue un enfoque de especificación formal para garantizar su robustez y validación. El uso de técnicas formales, como el método Z y otras herramientas de modelado de sistemas, permite describir con precisión el comportamiento del sistema y realizar pruebas exhaustivas para su validación \cite{fitzgerald2009, woodcock1996}.
+En resumen, el uso de tecnologías avanzadas combinado con m\u00e9todos formales de especificaci\u00f3n y validaci\u00f3n constituye un enfoque integral para abordar el problema de la detecci\u00f3n de metales pesados. Este enfoque no solo mejora la calidad de los datos obtenidos, sino que tambi\u00e9n refuerza la confianza en la toma de decisiones basada en evidencia científica.
