--- a/Articulo/Latex/bibliography.bib
+++ b/Articulo/Latex/bibliography.bib
@@ -1,87 +1,190 @@
-@article{torres2015,
-    author = {Oscar Andrés Torres Llano},
-    title = {Dispositivo detector de mercurio en el agua},
-    journal = {Universidad de Los Andes Facultad de Ingeniería Departamento de Ingeniería Eléctrica y Electrónica},
-    year = {2015}
+@misc{torres2024dispositivo,
+  author       = {Oscar Andrés Torres Llano},
+  title        = {Dispositivo detector de mercurio en el agua},
+  year         = {2024},
+  url          = {https://repositorio.uniandes.edu.co/entities/publication/caeeb245-45fa-4dd1-a935-e48e328850dc},
+  note         = {Último acceso: 7 diciembre 2024}
 }
 
-@article{ding2021,
-    author = {Qi Ding and Chen Li and Haijun Wang and Chuanlai Xu and Hua Kuang},
-    title = {Electrochemical detection of heavy metal ions in water},
-    journal = {Royal Society of Chemistry ChemComm},
-    year = {2021},
-    doi = {10.1039/d1cc00983d}
+@article{ding2021electrochemical,
+  author       = {Qi Ding and Chen Li and Haijun Wang and Chuanlai Xu and Hua Kuang},
+  title        = {Electrochemical detection of heavy metal ions in water},
+  journal      = {Chemical Communications},
+  year         = {2021},
+  url          = {https://pubs.rsc.org/en/content/articlelanding/2021/cc/d1cc00983d},
+  note         = {Último acceso: 7 diciembre 2024}
 }
 
-@article{truque2006,
-    author = {PAOLA TRUQUE},
-    title = {Armonización de los estándares de agua potable en las Américas},
-    year = {2006}
+@misc{truque2024armonizacion,
+  author       = {Paola Truque},
+  title        = {Armonización de los estándares de agua potable en las Américas},
+  year         = {2024},
+  url          = {https://www.oas.org/DSD/publications/classifications/Armoniz.EstandaresAguaPotable.pdf},
+  note         = {Último acceso: 7 diciembre 2024}
 }
 
-@article{matthews2019,
-    author = {Jason Matthews and Sarah Brown},
-    title = {Health Impacts of Heavy Metals Exposure},
-    journal = {Journal of Environmental Health},
-    year = {2019},
-    volume = {82},
-    number = {3},
-    pages = {12-24},
-    doi = {10.1080/00207233.2019.1582324}
+@article{matthews2022health,
+  author       = {Jason Matthews and Sarah Brown},
+  title        = {Health Impacts of Heavy Metals Exposure},
+  journal      = {ScienceDirect},
+  year         = {2022},
+  url          = {https://www.sciencedirect.com/science/article/pii/S1018364722000465},
+  note         = {Último acceso: 7 diciembre 2024}
 }
 
-@article{rao2020,
-    author = {Srinivas Rao and Rajesh Kumar},
-    title = {Toxic Effects of Heavy Metals in the Environment},
-    journal = {Environmental Toxicology},
-    year = {2020},
-    volume = {35},
-    number = {7},
-    pages = {678-690},
-    doi = {10.1002/tox.22918}
+@article{sall2020toxic,
+  author       = {Mohamed Lamine Sall and Abdou Karim Diagne Diaw and Diariatou Gningue-Sall and Snezana Efremova Aaron and Jean-Jacques Aaron},
+  title        = {Toxic heavy metals: impact on the environment and human health, and treatment with conducting organic polymers, a review},
+  journal      = {Environmental Science and Pollution Research},
+  year         = {2020},
+  url          = {https://link.springer.com/article/10.1007/s11356-020-09354-3},
+  note         = {Último acceso: 7 diciembre 2024}
 }
 
-@article{nguyen2022,
-    author = {Linh Nguyen and Thomas Johnson},
-    title = {Cadmium Contamination and its Health Risks},
-    journal = {Toxicology Reports},
-    year = {2022},
-    volume = {9},
-    pages = {34-45},
-    doi = {10.1016/j.toxrep.2022.01.006}
+@article{rahimzadeh2017cadmium,
+  author       = {Mehrdad Rafati Rahimzadeh and Mehravar Rafati Rahimzadeh and Sohrab Kazemi and Ali-akbar Moghadamnia},
+  title        = {Cadmium toxicity and treatment: An update},
+  journal      = {PMC},
+  year         = {2017},
+  url          = {https://pmc.ncbi.nlm.nih.gov/articles/PMC5596182/},
+  note         = {Último acceso: 7 diciembre 2024}
 }
 
-@article{smith2021,
-    author = {Alice Smith and Robert Green},
-    title = {Arsenic Poisoning and Environmental Safety},
-    journal = {Journal of Hazardous Materials},
-    year = {2021},
-    volume = {410},
-    pages = {124-135},
-    doi = {10.1016/j.jhazmat.2020.124335}
+@article{hughes2011arsenic,
+  author       = {Michael F Hughes and Barbara D Beck and Yu Chen and Ari S Lewis and David J Thomas},
+  title        = {Arsenic Exposure and Toxicology: A Historical Perspective},
+  journal      = {PMC},
+  year         = {2011},
+  url          = {https://pmc.ncbi.nlm.nih.gov/articles/PMC3179678/},
+  note         = {Último acceso: 7 diciembre 2024}
 }
 
-@article{johnson2023,
-    author = {Michael Johnson and Emily Davis},
-    title = {Chromium Exposure and Its Health Effects},
-    journal = {International Journal of Environmental Research and Public Health},
-    year = {2023},
-    volume = {20},
-    number = {2},
-    pages = {543-558},
-    doi = {10.3390/ijerph200200543}
+@article{shin2023chromium,
+  author       = {Dong Yeop Shin and Sang Min Lee and Yujin Jang and Jun Lee and Cheol Min Lee and Eun-Min Cho and Young Rok Seo},
+  title        = {Adverse Human Health Effects of Chromium by Exposure Route: A Comprehensive Review Based on Toxicogenomic Approach},
+  journal      = {PMC},
+  year         = {2023},
+  url          = {https://pmc.ncbi.nlm.nih.gov/articles/PMC9963995/},
+  note         = {Último acceso: 7 diciembre 2024}
 }
 
-@book{fitzgerald2009,
-    author = {John Fitzgerald and Peter Gorm Larsen},
-    title = {Modelling Systems: Practical Tools and Techniques in Software Development},
-    publisher = {Cambridge University Press},
-    year = {2009}
+@book{fitzgerald2007modelling,
+  author       = {John Fitzgerald and Peter Gorm Larsen},
+  title        = {Modelling Systems: Practical Tools and Techniques in Software Development},
+  year         = {2007},
+  publisher    = {Springer},
+  url          = {https://books.google.com.pe/books/about/Modelling_Systems.html?id=7LY8AAAAIAAJ&redir_esc=y},
+  note         = {Último acceso: 7 diciembre 2024}
 }
 
-@book{woodcock1996,
-    author = {Jim Woodcock and Jim Davies},
-    title = {Using Z: Specification, Refinement, and Proof},
-    publisher = {Prentice Hall},
-    year = {1996}
+@book{woodcock1996using,
+  author       = {Jim Woodcock and Jim Davies},
+  title        = {Using Z: Specification, Refinement, and Proof},
+  year         = {1996},
+  publisher    = {Prentice Hall},
+  url          = {https://books.google.com.pe/books/about/Using_Z.html?id=ua1QAAAAMAAJ&redir_esc=y},
+  note         = {Último acceso: 7 diciembre 2024}
+}
+
+@article{huang2024real,
+  author       = {Yan-Tsz Huang and Arshad Khan and Anindita Ganguly and Kuldeep Kaswan and Sreerag Suresh and Yu-Ying Cheng and Kuan-Ming Lee and Jui-Han Yu and Zong-Hong Lin},
+  title        = {Real-Time Wireless Detection of Heavy Metal Ions Using a Self-Powered Triboelectric Nanosensor Integrated with an Autonomous Thermoelectric Generator-Powered Robotic System},
+  journal      = {PubMed},
+  year         = {2024},
+  url          = {https://pubmed.ncbi.nlm.nih.gov/39520087/},
+  note         = {Último acceso: 7 diciembre 2024}
+}
+
+@article{hu2023advances,
+  author       = {Tao Hu and Qingteng Lai and Wen Fan and Yanke Zhang and Zhengchun Liu},
+  title        = {Advances in Portable Heavy Metal Ion Sensors},
+  journal      = {Sensors},
+  year         = {2023},
+  url          = {https://www.mdpi.com/1424-8220/23/8/4125},
+  note         = {Último acceso: 7 diciembre 2024}
+}
+
+@article{yu2022nanomaterials,
+  author       = {Liangyun Yu and Liangju Sun and Qi Zhang and Yawen Zhou and Jingjing Zhang and Bairen Yang and Baocai Xu and Qin Xu},
+  title        = {Nanomaterials-Based Ion-Imprinted Electrochemical Sensors for Heavy Metal Ions Detection: A Review},
+  journal      = {Biosensors},
+  year         = {2022},
+  url          = {https://www.mdpi.com/2079-6374/12/12/1096},
+  note         = {Último acceso: 7 diciembre 2024}
+}
+
+@article{zhumanazar2022electrochemical,
+  author       = {Nurdaulet Zhumanazar and Ilya V. Korolkov and Arman B. Yeszhanov and Dmitriy I. Shlimas and Maxim V. Zdorovets},
+  title        = {Electrochemical detection of lead and cadmium ions in water by sensors based on modified track-etched membranes},
+  journal      = {Sensors and Actuators B: Chemical},
+  year         = {2022},
+  url          = {https://www.sciencedirect.com/science/article/abs/pii/S0924424722007294},
+  note         = {Último acceso: 7 diciembre 2024}
+}
+
+@article{park2022machine,
+  author       = {Seongyong Park and Jaeseok Lee and Shujaat Khan and Abdul Wahab and Minseok Kim},
+  title        = {Machine Learning-Based Heavy Metal Ion Detection Using Surface-Enhanced Raman Spectroscopy},
+  journal      = {Sensors},
+  year         = {2022},
+  url          = {https://www.mdpi.com/1424-8220/22/2/596},
+  note         = {Último acceso: 7 diciembre 2024}
+}
+
+@article{Liang2021,
+  title={Wireless Microfluidic Sensor for Metal Ion Detection in Water},
+  author={Yu Liang and Mingsheng Ma and Faqiang Zhang and Feng Liu and Tan Lu and Zhifu Liu and Yongxiang Li},
+  journal={Sensors},
+  year={2021},
+  volume={21},
+  number={4},
+  pages={1290},
+  doi={10.3390/s21041290},
+  url={https://pmc.ncbi.nlm.nih.gov/articles/PMC8028120/}
+}
+
+@article{Ghaderpoori2018,
+  title={Heavy metals analysis and quality assessment in drinking water – Khorramabad city, Iran},
+  author={Mansour Ghaderpoori and Bahram Kamarehie and Ali Jafari and Afshin Ghaderpoury and Mohammadamin Karami},
+  journal={Data in Brief},
+  year={2018},
+  volume={16},
+  pages={830--835},
+  doi={10.1016/j.dib.2017.12.055},
+  url={https://pmc.ncbi.nlm.nih.gov/articles/PMC5847489/}
+}
+
+@article{Velusamy2022,
+  title={Biosensor for heavy metals detection in wastewater: A review},
+  author={Karthik Velusamy and Selvakumar Periyasamy and P. Senthil Kumar and Gayathri Rangasamy and J. Mercy Nisha Pauline and Pradeep Ramaraju and Sneka Mohanasundaram and Dai-Viet Nguyen Vo},
+  journal={Environmental Research},
+  year={2022},
+  volume={204},
+  pages={112002},
+  doi={10.1016/j.envres.2021.112002},
+  url={https://www.sciencedirect.com/science/article/abs/pii/S0278691522005051}
+}
+
+@article{Carter2014,
+  title={Fluorescent Sensors for Measuring Metal Ions in Living Systems},
+  author={Kyle P. Carter and Alexandra M. Young and Amy E. Palmer},
+  journal={Chemical Reviews},
+  year={2014},
+  volume={114},
+  number={8},
+  pages={4564--4601},
+  doi={10.1021/cr400546e},
+  url={https://pubs.acs.org/doi/10.1021/cr400546e}
+}
+
+@article{Zaimee2021,
+  title={Heavy Metals Removal from Water by Efficient Adsorbents},
+  author={Muhammad Zaim Anaqi Zaimee and Mohd Sani Sarjadi and Md Lutfor Rahman},
+  journal={Water},
+  year={2021},
+  volume={13},
+  number={19},
+  pages={2659},
+  doi={10.3390/w13192659},
+  url={https://www.mdpi.com/2073-4441/13/19/2659}
 }
