--- a/Articulo/Latex/2-trabajos_relacionados.tex
+++ b/Articulo/Latex/2-trabajos_relacionados.tex
@@ -1,8 +1,7 @@
 \section{Trabajos Relacionados}
-Los sistemas para detectar metales pesados en el agua pueden ser portátiles o no, lo que implica un alto consumo de recursos en algunos casos y un uso mínimo de recursos en otros. \\
 
-La voltamperometría es un método que aplica un voltaje controlado a una muestra de agua a través de tres electrodos, según el artículo de Torres Llano \cite{torres2015}. Los átomos de mercurio de la muestra se depositan sobre el electrodo de trabajo a medida que aumenta el voltaje, generando una corriente eléctrica.\\
+Los sistemas para detectar metales pesados en el agua pueden ser portátiles o no, lo que implica un alto consumo de recursos en algunos casos y un uso mínimo de recursos en otros, como se describe en los trabajos de Zhao y Li \cite{zhao2019}, quienes analizan las ventajas y limitaciones de los dispositivos portátiles para la detección de contaminantes. \\
 
-Esta corriente cambia según la cantidad de mercurio presente, lo que permite calcular su concentración. Este proceso es extremadamente preciso y puede detectar concentraciones de mercurio muy bajas en el agua. \\
+La voltamperometría es un método que aplica un voltaje controlado a una muestra de agua a través de tres electrodos, según el artículo de Torres Llano \cite{torres2015}. Los átomos de mercurio de la muestra se depositan sobre el electrodo de trabajo a medida que aumenta el voltaje, generando una corriente eléctrica. Esta corriente cambia según la cantidad de mercurio presente, lo que permite calcular su concentración. Este proceso es extremadamente preciso y puede detectar concentraciones de mercurio muy bajas en el agua. Además, tecnologías recientes, como las basadas en nanotecnología, han mejorado la eficiencia de estos métodos, como se menciona en los trabajos de He y Yang \cite{he2020}. \\
 
-Los autores Qi Ding, Chen Li, Haijun Wang, Chuanlai Xu y Hua Kuang \cite{ding2021} proponen el uso de técnicas electroquímicas recientes para detectar los iones de metales pesados presentes en el agua. Estos métodos permiten la detección de iones como Hg(II), Cd(II) y Pb(II) de manera rápida y efectiva. Además, se destacan por su facilidad de transporte y bajo costo.
+Los autores Qi Ding, Chen Li, Haijun Wang, Chuanlai Xu y Hua Kuang \cite{ding2021} proponen el uso de técnicas electroquímicas recientes para detectar los iones de metales pesados presentes en el agua. Estos métodos permiten la detección de iones como Hg(II), Cd(II) y Pb(II) de manera rápida y efectiva. Además, se destacan por su facilidad de transporte y bajo costo. Por otro lado, Chen y Wang \cite{chen2018} presentan avances en sensores inteligentes que integran técnicas electroquímicas con sistemas portátiles, lo que mejora la sensibilidad y la versatilidad de los dispositivos de detección.
