--- a/Articulo/Latex/7-validacion.tex
+++ b/Articulo/Latex/7-validacion.tex
@@ -28,8 +28,8 @@ valoresPrueba1() == (
 
 public valoresPrueba2: () ==> () 
 valoresPrueba2() == (
-	limites := {1 |-> new Metal(1, "Plomo", 10.0), 2 |-> new Metal(2, "Mercurio", 6.0),  3 |-> new Metal(3, "Arsénico", 4.0)};
-	metales := [new Metal(1, "Plomo", 4.5), new Metal(2, "Mercurio", 5.0), new Metal(3, "Arsénico", 3.2)];
+	limites := {1 |-> new Metal(1, "Plomo", 10.0), 2 |-> new Metal(2, "Mercurio", 6.0),  3 |-> new Metal(3, "Arsenico", 4.0)};
+	metales := [new Metal(1, "Plomo", 4.5), new Metal(2, "Mercurio", 5.0), new Metal(3, "Arsenico", 3.2)];
 	muestras := [new Muestra(1, "Laboratorio A", mk_(2024, 09, 20), mk_(14, 30, 0), [metales(1), metales(2)]), new Muestra(2, "Laboratorio B", mk_(2024, 10, 21), mk_(16, 0, 0), [metales(2), metales(3)])];
 	reportes := [new Reporte(1, limites, muestras, false), new Reporte(2, limites, muestras, false)];
 );
@@ -69,5 +69,3 @@ Finalmente, se muestra la segunda parte de los resultados del Coverage del Siste
     \includegraphics[width=0.5\textwidth]{Recursos/AnalisisCoverage2.png}
     \caption{Realizando Analisis de Coverage, Parte 1.}
 \end{figure}
-
-\newpage
